# flux

./: .gitignore  Makefile  PRD.md  README.md  docker-compose.yml  pyproject.toml
k8s/: configmap.yaml  gateway-deployment.yaml  ingress.yaml  keda-scaledobject.yaml  namespace.yaml  worker-deployment.yaml
k8s/charts/llm-stack/: Chart.yaml  values.yaml
k8s/charts/llm-stack/templates/: _helpers.tpl  configmap.yaml  gateway-deployment.yaml  gateway-service.yaml  ingress.yaml  keda-scaledobject.yaml  pvc.yaml  worker-deployment.yaml
k8s/observability/: grafana-config.yaml  grafana-deployment.yaml  prometheus-config.yaml  prometheus-deployment.yaml
scripts/: download_model.sh  load_test.py  test_streaming.py  test_streaming_verbose.py
services/: __init__.py
services/gateway/: Dockerfile  __init__.py  gateway.py  requirements.txt
services/worker/: Dockerfile  __init__.py  requirements.txt  worker.py
