[project]
name = "async-scale"
version = "1.0.0"
description = "Event-Driven LLM Orchestration with Kubernetes, KEDA, and WebSocket Streaming"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Prasad" }
]
keywords = ["llm", "kubernetes", "keda", "websocket", "streaming", "llama-cpp"]
dependencies = [
    # Gateway dependencies
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
    "websockets>=15.0.1",
    # Shared dependencies
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    # Observability
    "prometheus-client>=0.20.0",
]

[project.scripts]
gateway = "services.gateway.gateway:main"
worker = "services.worker.worker:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",  # For load testing
]
